added html structure for header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Restaurant Portfolio</title>
 </head>
 <body>
-    
+    <!-- header starts here -->
+    <header class="header">
+        <div class="brand">
+            <a href="#" class="logo">
+                <i class="fa fa-utensils"></i>
+            </a>
+            <div>
+                <h1 class="main-name">Indian</h1>
+                <p class="sub-name">Restaurant</p>
+            </div>
+        </div>
+        <div class="header-banner">
+            <h1 class="main-heading">Welcome</h1>
+            <h3 class="sub-heading">Try Great Indian Dishes</h3>
+            <button type="button" class="main-btn">Reservation</button>
+        </div>
+    </header>
+    <!-- header ends here -->
 </body>
 </html>
