--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700|Nunito:300,400,600,700" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/main.css">
     <title>Restaurant Portfolio</title>
 </head>
