added html structure for about us section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Restaurant Portfolio</title>
 </head>
 <body>
-    <!-- header starts here -->
+    <!-- Header starts here -->
     <header class="header">
         <div class="brand">
             <a href="#" class="logo">
@@ -23,12 +23,38 @@
                 <p class="sub-name">Restaurant</p>
             </div>
         </div>
+
         <div class="header-banner">
             <h1 class="main-heading">Welcome</h1>
             <h3 class="sub-heading">Try Great Indian Dishes</h3>
             <button type="button" class="main-btn">Reservation</button>
         </div>
     </header>
-    <!-- header ends here -->
+    <!-- Header ends here -->
+
+    <!-- About Us starts here -->
+    <section class="about-us">
+        <div class="about-us-left">
+            <img src="./images/about-us-img.png" alt="Get To Know More About Us">
+        </div>
+        
+        <div class="about-us-right">
+            <h1 class="main-heading">About Us</h1>
+            <h3 class="sub-heading">Introducing Indian Dishes</h3>
+            <div class="stars">
+                <i class="fas fa-star-of-life star"></i>
+                <i class="fas fa-star-of-life star"></i>
+                <i class="fas fa-star-of-life star"></i>
+            </div>
+            <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint aspernatur commodi veritatis, fuga consequuntur reprehenderit debitis temporibus corrupti, eos suscipit inventore omnis placeat earum sed blanditiis pariatur. Cum eligendi, at enim atque perferendis alias dolorum, dolores odio nobis quos pariatur officiis, laudantium aperiam explicabo! Magnam libero commodi placeat? Nihil, excepturi.</p>
+            <div class="stars">
+                <i class="fas fa-star-of-life star"></i>
+                <i class="fas fa-star-of-life star"></i>
+                <i class="fas fa-star-of-life star"></i>
+            </div>
+            <button type="button" class="main-btn">Read More</button>
+        </div>
+    </section>
+    <!-- About Us ends here -->
 </body>
 </html>
