--- a/index.html
+++ b/index.html
@@ -56,5 +56,60 @@
         </div>
     </section>
     <!-- About Us ends here -->
+
+    <!-- Gallery starts here -->
+    <section class="gallery">
+        <div class="cards-wrapper">
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-1.jpeg" class="card-img" alt="Gallery Image 1">
+            </div>
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-2.jpeg" class="card-img" alt="Gallery Image 2">
+            </div>
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-3.jpeg" class="card-img" alt="Gallery Image 3">
+            </div>
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-4.jpeg" class="card-img" alt="Gallery Image 4">
+            </div>
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-5.jpeg" class="card-img" alt="Gallery Image 5">
+            </div>
+            <div class="card">
+                <div class="card-overlay">
+                    <h1 class="card-overlay-heading">Food Name</h1>
+                    <p class="card-overlay-paragraph">Price: $30.00</p>
+                    <button type="button" class="card-overlay-btn">Order Now</button>
+                </div>
+                <img src="images/gallery-img-6.jpeg" class="card-img" alt="Gallery Image 6">
+            </div>
+        </div>
+    </section>
+    <!-- Gallery ends here -->
 </body>
 </html>
