added html structure for footer

--- a/index.html
+++ b/index.html
@@ -111,5 +111,46 @@
         </div>
     </section>
     <!-- Gallery ends here -->
+
+    <!-- Footer starts here -->
+    <footer class="footer">
+        <div class="footer-header">
+            <a href="#" class="logo">
+                <i class="fa fa-utensils"></i>
+            </a>
+            <div>
+                <h1 class="main-name">Indian</h1>
+                <p class="sub-name">Restaurant</p>
+            </div>
+        </div>
+        <div class="social-media">
+            <ul class="social-media">
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"></a>
+                    <i class="fab fa-facebook-square"></i>
+
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"></a>
+                    <i class="fab fa-instagram"></i>
+
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"></a>
+                    <i class="fab fa-google-plus-square"></i>
+
+                </li>
+                <li class="social-media-item">
+                    <a href="#" class="social-media-link"></a>
+                    <i class="fab fa-youtube"></i>
+
+                </li>
+            </ul>
+        </div>
+        <div class="footer-copyright">
+            <p class="footer-copyright-paragraph">&copy; Copyright. Restaurant "Indian". All Rights Reserved.</p>
+        </div>
+    </footer>
+    <!-- Footer ends here -->
 </body>
 </html>
