added html structure for navbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,50 @@
     <title>Restaurant Portfolio</title>
 </head>
 <body>
+    <!-- Navbar starts here -->
+    <nav class="navbar">
+        <input type="checkbox" id="check" class="checkbox">
+        <div class="hamburger-menu">
+            <label for="check" class="menu">
+                <div class="menu-line menu-line-1"></div>
+                <div class="menu-line menu-line-2"></div>
+                <div class="menu-line menu-line-3"></div>
+            </label>
+        </div>
+
+        <div class="navbar-navigation">
+            <div class="navbar-navigation-left">
+                <img src="images/nav-img-1.jpeg" alt="Navbar Image 1" class="left-img left-img-1">
+                <img src="images/nav-img-2.jpeg" alt="Navbar Image 2" class="left-img left-img-2">
+                <img src="images/nav-img-3.jpeg" alt="Navbar Image 3" class="left-img left-img-3">
+            </div>
+
+            <div class="navbar-navigation-right">
+                <ul class="nav-list">
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">Home</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">About Us</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">Gallery</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">Reservation</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">Services</a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="#" class="nav-list-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar ends here -->
+
     <!-- Header starts here -->
     <header class="header">
         <div class="brand">
