--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar starts here -->
     <nav class="navbar">
-        <input type="checkbox" id="check" class="checkbox">
+        <input type="checkbox" id="check" class="checkbox" hidden>
         <div class="hamburger-menu">
             <label for="check" class="menu">
                 <div class="menu-line menu-line-1"></div>
