--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Josefin+Sans:300,400,600,700|Nunito:300,400,600,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700|Josefin+Sans:300,400,600,700|Nunito:300,400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Restaurant Portfolio</title>
 </head>
@@ -170,24 +170,24 @@
         <div class="social-media">
             <ul class="social-media">
                 <li class="social-media-item">
-                    <a href="#" class="social-media-link"></a>
-                    <i class="fab fa-facebook-square"></i>
-
+                    <a href="#" class="social-media-link">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
                 </li>
                 <li class="social-media-item">
-                    <a href="#" class="social-media-link"></a>
-                    <i class="fab fa-instagram"></i>
-
+                    <a href="#" class="social-media-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
                 </li>
                 <li class="social-media-item">
-                    <a href="#" class="social-media-link"></a>
-                    <i class="fab fa-google-plus-square"></i>
-
+                    <a href="#" class="social-media-link">
+                        <i class="fab fa-google-plus-square"></i>
+                    </a>
                 </li>
                 <li class="social-media-item">
-                    <a href="#" class="social-media-link"></a>
-                    <i class="fab fa-youtube"></i>
-
+                    <a href="#" class="social-media-link">
+                        <i class="fab fa-youtube"></i>
+                    </a>
                 </li>
             </ul>
         </div>
